--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation_main"
-    app:startDestination="@id/baseFragment">
+    app:startDestination="@id/homeFragment">
     <fragment
-        android:id="@+id/baseFragment"
-        android:name="com.example.strikers_tr.views.home.Fragments.base.BaseFragment"
-        android:label="BaseFragment" />
+        android:id="@+id/homeFragment"
+        android:name="com.example.strikers_tr.views.home.fragments.home.HomeFragment"
+        android:label="HomeFragment" />
+    <fragment
+        android:id="@+id/gamesFragment"
+        android:name="com.example.strikers_tr.views.home.fragments.games.GamesFragment"
+        android:label="GamesFragment" />
+    <fragment
+        android:id="@+id/tournamentFragment"
+        android:name="com.example.strikers_tr.views.home.fragments.tournament.TournamentFragment"
+        android:label="TournamentFragment" />
+    <fragment
+        android:id="@+id/messagesFragment"
+        android:name="com.example.strikers_tr.views.home.fragments.messages.MessagesFragment"
+        android:label="MessagesFragment" />
+    <fragment
+        android:id="@+id/teamsFragment"
+        android:name="com.example.strikers_tr.views.home.fragments.teams.TeamsFragment"
+        android:label="TeamsFragment" />
 </navigation>
