--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="black_two_50">#802A2A2A</color>
     <color name="kermit_green">#63ba00</color>
     <color name="gray_white">#5EFFFFFF</color>
+    <color name="dark_lime_green">#72d500</color>
+    <color name="black_three">#3a3a3a</color>
 </resources>
