--- a/app/src/main/res/layout/item_quick_message.xml
+++ b/app/src/main/res/layout/item_quick_message.xml
@@ -15,12 +15,15 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="11.6dp"
+            android:layout_marginRight="11.6dp"
             android:background="@drawable/rounded_quik_message_text"
             android:ellipsize="end"
             android:fontFamily="@font/cairo"
             android:maxLines="1"
             android:padding="8dp"
             android:text="@{quikMessage}"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
