--- a/app/src/main/res/layout/item_strikers_new.xml
+++ b/app/src/main/res/layout/item_strikers_new.xml
@@ -8,33 +8,36 @@
             name="strikerNew"
             type="com.example.strikers_tr.model.StrikersNew" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp">
-    <TextView
-        android:id="@+id/sectionName_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:visibility="@{strikerNew.firstItem ? View.VISIBLE : View.GONE}"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="26.9sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/strickers_news" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/sectionName_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/strickers_news"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="26.9sp"
+            android:visibility="@{strikerNew.firstItem ? View.VISIBLE : View.GONE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="11dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
+            android:layout_marginBottom="11dp"
             app:cardCornerRadius="11.5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sectionName_textView">
