--- a/app/src/main/res/layout/fragment_tournament_game_details.xml
+++ b/app/src/main/res/layout/fragment_tournament_game_details.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             tools:listitem="@layout/item_strikers_new"
             app:tournamentData="@{tournamentVM.tournamentDataLiveData}"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
